--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "include-media": "^1.4.9",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
