--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lydia Gregory Portfolio",
+  "name": "lydiagregory",
   "private": true,
   "description": "Web development portfolio site",
   "version": "0.1.0",
@@ -16,12 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^5.13.3",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-sass": "^6.13.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.10.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "prettier": "3.2.5"
